--- a/.env
+++ b/.env
@@ -1,28 +1,19 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:gc4MnKGogo5R9VlbpIJIxyLT+VBLovtMV4lVvGucQEc=
+APP_KEY=base64:TMfJ/ZFE5vkphEX2XKx93eifx03Y6H5xx5ERWMGYAvI=
 APP_DEBUG=true
-APP_URL=https://arsip-digital-production.up.railway.app/
+APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-# DB_CONNECTION=mysql
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=arsip_digital
-# DB_USERNAME=root
-# DB_PASSWORD=
-
 DB_CONNECTION=mysql
-DB_HOST=mysql-arsip-digital-teguhdianbangun-34f3.e.aivencloud.com
-DB_PORT=25083
-DB_DATABASE=defaultdb
-DB_USERNAME=avnadmin
-DB_PASSWORD=AVNS_9WQL4e8H5SgeMqITV1J
-
-DB_SSL_CA=ca.pem
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_DATABASE=arsip_digital
+DB_USERNAME=root
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -46,22 +37,22 @@ MAIL_ENCRYPTION=null
 MAIL_FROM_ADDRESS="hello@example.com"
 MAIL_FROM_NAME="${APP_NAME}"
 
-# AWS_ACCESS_KEY_ID=
-# AWS_SECRET_ACCESS_KEY=
-# AWS_DEFAULT_REGION=us-east-1
-# AWS_BUCKET=
-# AWS_USE_PATH_STYLE_ENDPOINT=false
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_DEFAULT_REGION=us-east-1
+AWS_BUCKET=
+AWS_USE_PATH_STYLE_ENDPOINT=false
 
-# PUSHER_APP_ID=
-# PUSHER_APP_KEY=
-# PUSHER_APP_SECRET=
-# PUSHER_HOST=
-# PUSHER_PORT=443
-# PUSHER_SCHEME=https
-# PUSHER_APP_CLUSTER=mt1
+PUSHER_APP_ID=
+PUSHER_APP_KEY=
+PUSHER_APP_SECRET=
+PUSHER_HOST=
+PUSHER_PORT=443
+PUSHER_SCHEME=https
+PUSHER_APP_CLUSTER=mt1
 
-# VITE_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
-# VITE_PUSHER_HOST="${PUSHER_HOST}"
-# VITE_PUSHER_PORT="${PUSHER_PORT}"
-# VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
-# VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+VITE_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
+VITE_PUSHER_HOST="${PUSHER_HOST}"
+VITE_PUSHER_PORT="${PUSHER_PORT}"
+VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
+VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
